--- a/frontends/package.json
+++ b/frontends/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "drage-creator",
+  "name": "frontends",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
